Scan git refs heads (#7)
* git scan

* git refs heads

* show deploying status and absent ref

* v0.2.9
