# internal/envrouter/api/server.go
@@ -1,6 +1,6 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
 package api
 
 import (
@@ -32,8 +32,11 @@ type ServerInterface interface {
 	// (GET /api/v1/environments)
 	GetApiV1Environments(c *gin.Context)
 
-	// (GET /api/v1/git/applications/{applicationName}/commits/{sha})
-	GetApiV1GitApplicationsApplicationNameCommitsSha(c *gin.Context, applicationName string, sha string)
+	// (GET /api/v1/git/refs)
+	GetApiV1GitRefs(c *gin.Context)
+
+	// (GET /api/v1/git/repositories/{repositoryName}/commits/{sha})
+	GetApiV1GitRepositoriesRepositoryNameCommitsSha(c *gin.Context, repositoryName string, sha string)
 
 	// (GET /api/v1/instancePods)
 	GetApiV1InstancePods(c *gin.Context)
@@ -147,17 +150,27 @@ func (siw *ServerInterfaceWrapper) GetApiV1Environments(c *gin.Context) {
 	siw.Handler.GetApiV1Environments(c)
 }
 
-// GetApiV1GitApplicationsApplicationNameCommitsSha operation middleware
-func (siw *ServerInterfaceWrapper) GetApiV1GitApplicationsApplicationNameCommitsSha(c *gin.Context) {
+// GetApiV1GitRefs operation middleware
+func (siw *ServerInterfaceWrapper) GetApiV1GitRefs(c *gin.Context) {
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+	}
+
+	siw.Handler.GetApiV1GitRefs(c)
+}
+
+// GetApiV1GitRepositoriesRepositoryNameCommitsSha operation middleware
+func (siw *ServerInterfaceWrapper) GetApiV1GitRepositoriesRepositoryNameCommitsSha(c *gin.Context) {
 
 	var err error
 
-	// ------------- Path parameter "applicationName" -------------
-	var applicationName string
+	// ------------- Path parameter "repositoryName" -------------
+	var repositoryName string
 
-	err = runtime.BindStyledParameter("simple", false, "applicationName", c.Param("applicationName"), &applicationName)
+	err = runtime.BindStyledParameter("simple", false, "repositoryName", c.Param("repositoryName"), &repositoryName)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"msg": fmt.Sprintf("Invalid format for parameter applicationName: %s", err)})
+		c.JSON(http.StatusBadRequest, gin.H{"msg": fmt.Sprintf("Invalid format for parameter repositoryName: %s", err)})
 		return
 	}
 
@@ -174,7 +187,7 @@ func (siw *ServerInterfaceWrapper) GetApiV1GitApplicationsApplicationNameCommits
 		middleware(c)
 	}
 
-	siw.Handler.GetApiV1GitApplicationsApplicationNameCommitsSha(c, applicationName, sha)
+	siw.Handler.GetApiV1GitRepositoriesRepositoryNameCommitsSha(c, repositoryName, sha)
 }
 
 // GetApiV1InstancePods operation middleware
@@ -326,7 +339,9 @@ func RegisterHandlersWithOptions(router *gin.Engine, si ServerInterface, options
 
 	router.GET(options.BaseURL+"/api/v1/environments", wrapper.GetApiV1Environments)
 
-	router.GET(options.BaseURL+"/api/v1/git/applications/:applicationName/commits/:sha", wrapper.GetApiV1GitApplicationsApplicationNameCommitsSha)
+	router.GET(options.BaseURL+"/api/v1/git/refs", wrapper.GetApiV1GitRefs)
+
+	router.GET(options.BaseURL+"/api/v1/git/repositories/:repositoryName/commits/:sha", wrapper.GetApiV1GitRepositoriesRepositoryNameCommitsSha)
 
 	router.GET(options.BaseURL+"/api/v1/instancePods", wrapper.GetApiV1InstancePods)
 
@@ -344,4 +359,3 @@ func RegisterHandlersWithOptions(router *gin.Engine, si ServerInterface, options
 
 	return router
 }
-
