# internal/envrouter/api/types.go
@@ -1,11 +1,11 @@
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
 package api
 
 // Defines values for InstanceType.
 const (
-	InstanceTypeDeployment InstanceType = "deployment"
+	Deployment InstanceType = "deployment"
 )
 
 // Application defines model for Application.
@@ -69,6 +69,13 @@ type InstancePod struct {
 	StartedTime *string   `json:"startedTime,omitempty"`
 }
 
+// Ref defines model for Ref.
+type Ref struct {
+	Commit     Commit `json:"commit"`
+	Ref        string `json:"ref"`
+	Repository string `json:"repository"`
+}
+
 // RefBinding defines model for RefBinding.
 type RefBinding struct {
 	Application string `json:"application"`
@@ -85,33 +92,32 @@ type Repository struct {
 }
 
 // PutApiV1ApplicationsNameJSONBody defines parameters for PutApiV1ApplicationsName.
-type PutApiV1ApplicationsNameJSONBody Application
+type PutApiV1ApplicationsNameJSONBody = Application
 
 // PostApiV1CredentialsSecretsJSONBody defines parameters for PostApiV1CredentialsSecrets.
-type PostApiV1CredentialsSecretsJSONBody CredentialsSecretRequest
+type PostApiV1CredentialsSecretsJSONBody = CredentialsSecretRequest
 
 // GetApiV1RefBindingsParams defines parameters for GetApiV1RefBindings.
 type GetApiV1RefBindingsParams struct {
-	Application *string `json:"application,omitempty"`
-	Environment *string `json:"environment,omitempty"`
-	Ref         *string `json:"ref,omitempty"`
+	Application *string `form:"application,omitempty" json:"application,omitempty"`
+	Environment *string `form:"environment,omitempty" json:"environment,omitempty"`
+	Ref         *string `form:"ref,omitempty" json:"ref,omitempty"`
 }
 
 // PostApiV1RefBindingsJSONBody defines parameters for PostApiV1RefBindings.
-type PostApiV1RefBindingsJSONBody RefBinding
+type PostApiV1RefBindingsJSONBody = RefBinding
 
 // PostApiV1RepositoriesJSONBody defines parameters for PostApiV1Repositories.
-type PostApiV1RepositoriesJSONBody Repository
+type PostApiV1RepositoriesJSONBody = Repository
 
 // PutApiV1ApplicationsNameJSONRequestBody defines body for PutApiV1ApplicationsName for application/json ContentType.
-type PutApiV1ApplicationsNameJSONRequestBody PutApiV1ApplicationsNameJSONBody
+type PutApiV1ApplicationsNameJSONRequestBody = PutApiV1ApplicationsNameJSONBody
 
 // PostApiV1CredentialsSecretsJSONRequestBody defines body for PostApiV1CredentialsSecrets for application/json ContentType.
-type PostApiV1CredentialsSecretsJSONRequestBody PostApiV1CredentialsSecretsJSONBody
+type PostApiV1CredentialsSecretsJSONRequestBody = PostApiV1CredentialsSecretsJSONBody
 
 // PostApiV1RefBindingsJSONRequestBody defines body for PostApiV1RefBindings for application/json ContentType.
-type PostApiV1RefBindingsJSONRequestBody PostApiV1RefBindingsJSONBody
+type PostApiV1RefBindingsJSONRequestBody = PostApiV1RefBindingsJSONBody
 
 // PostApiV1RepositoriesJSONRequestBody defines body for PostApiV1Repositories for application/json ContentType.
-type PostApiV1RepositoriesJSONRequestBody PostApiV1RepositoriesJSONBody
-
+type PostApiV1RepositoriesJSONRequestBody = PostApiV1RepositoriesJSONBody
