# internal/envrouter/git.go
@@ -1,51 +1,68 @@
 package envrouter
 
 import (
+	"fmt"
+	"github.com/go-git/go-git/v5"
+	"github.com/go-git/go-git/v5/plumbing"
+	"github.com/go-git/go-git/v5/plumbing/transport/http"
+	"github.com/go-git/go-git/v5/plumbing/transport/ssh"
+	log "github.com/sirupsen/logrus"
 	"gitlab.com/jonasasx/envrouter/internal/envrouter/api"
+	"gitlab.com/jonasasx/envrouter/internal/utils"
+	"os"
+	"reflect"
+
 	cryptossh "golang.org/x/crypto/ssh"
-	"gopkg.in/src-d/go-billy.v4"
-	"gopkg.in/src-d/go-billy.v4/memfs"
-	"gopkg.in/src-d/go-git.v4"
-	"gopkg.in/src-d/go-git.v4/plumbing"
-	"gopkg.in/src-d/go-git.v4/plumbing/transport/http"
-	"gopkg.in/src-d/go-git.v4/plumbing/transport/ssh"
-	"gopkg.in/src-d/go-git.v4/storage/memory"
+	"strings"
 	"time"
 )
 
 type GitClient interface {
-	GetCommitByHash(applicationName string, hash string) (*api.Commit, error)
-	GetLatestCommit(repositoryName string, ref string) (*api.Commit, error)
+	GetCommitByHash(repositoryName string, hash string) (*api.Commit, error)
+	SupplyRefsHeads(repositoryName string, supplier func(ref string, commit *api.Commit)) error
 }
 
 type gitClient struct {
-	applicationService       ApplicationService
 	repositoryService        RepositoryService
 	credentialsSecretService CredentialsSecretService
 }
 
 func NewGitClient(
-	applicationService ApplicationService,
 	repositoryService RepositoryService,
 	credentialsSecretService CredentialsSecretService,
 ) GitClient {
 	return &gitClient{
-		applicationService,
 		repositoryService,
 		credentialsSecretService,
 	}
 }
 
-func (g *gitClient) GetCommitByHash(applicationName string, hash string) (*api.Commit, error) {
-	application, err := g.applicationService.FindByName(applicationName)
+func (g *gitClient) getRepository(repositoryName string) (*git.Repository, error) {
+	options, err := g.getGitOptions(repositoryName)
 	if err != nil {
 		return nil, err
 	}
-	options, fs, storer, err := g.getGitOptions(*application.RepositoryName)
-	if err != nil {
-		return nil, err
+	path := fmt.Sprintf("/tmp/git/%s", repositoryName)
+	var r *git.Repository
+	if _, err := os.Stat(path); os.IsNotExist(err) {
+		r, err = git.PlainClone(path, true, options)
+	} else {
+		log.Infof("Start fetching %s", repositoryName)
+		r, err = git.PlainOpenWithOptions(path, &git.PlainOpenOptions{})
+		if err != nil {
+			return nil, err
+		}
+		err = r.Fetch(&git.FetchOptions{RemoteName: "origin", Depth: 1, Auth: options.Auth, Progress: options.Progress})
+		if err != nil && fmt.Sprint(err) != "already up-to-date" {
+			return nil, err
+		}
+		log.Infof("Fetched %s", repositoryName)
 	}
-	r, err := git.Clone(storer, fs, options)
+	return r, err
+}
+
+func (g *gitClient) GetCommitByHash(repositoryName string, hash string) (*api.Commit, error) {
+	r, err := g.getRepository(repositoryName)
 	if err != nil {
 		panic(err)
 	}
@@ -66,35 +83,44 @@ func (g *gitClient) getCommitByHash(repository *git.Repository, hash plumbing.Ha
 	}, nil
 }
 
-func (g *gitClient) GetLatestCommit(repositoryName string, ref string) (*api.Commit, error) {
-	options, fs, storer, err := g.getGitOptions(repositoryName)
+func (g *gitClient) SupplyRefsHeads(repositoryName string, supplier func(ref string, commit *api.Commit)) error {
+	r, err := g.getRepository(repositoryName)
+	if err != nil {
+		return err
+	}
+	iter, err := r.References()
+	err = iter.ForEach(func(ref *plumbing.Reference) error {
+		if strings.HasPrefix(string(ref.Name()), "refs/remotes/origin/") {
+			refName := strings.Replace(ref.Name().Short(), "origin/", "", 1)
+			log.Infof("ref: %v", refName)
+			commit, err := g.getCommitByHash(r, ref.Hash())
+			if err != nil {
+				return err
+			}
+			supplier(refName, commit)
+		}
+		return nil
+	})
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func (g *gitClient) getGitOptions(repositoryName string) (*git.CloneOptions, error) {
+	repository, err := g.repositoryService.FindByName(repositoryName)
 	if err != nil {
 		return nil, err
 	}
-	r, err := git.Clone(storer, fs, options)
-	if err != nil {
-		panic(err)
-	}
-	h, err := r.ResolveRevision(plumbing.Revision("origin/" + ref))
-	if err != nil {
-		panic(err)
-	}
-	return g.getCommitByHash(r, *h)
-}
-
-func (g *gitClient) getGitOptions(repositoryName string) (*git.CloneOptions, billy.Filesystem, *memory.Storage, error) {
-	repository, err := g.repositoryService.FindByName(repositoryName)
-	if err != nil {
-		return nil, nil, nil, err
-	}
 	credentials, err := g.credentialsSecretService.FindByName(repository.CredentialsSecret)
 	if err != nil {
-		return nil, nil, nil, err
+		return nil, err
 	}
 
 	options := &git.CloneOptions{
 		NoCheckout: true,
 		URL:        repository.Url,
+		Progress:   os.Stdout,
 	}
 
 	if credentials != nil {
@@ -114,35 +140,53 @@ func (g *gitClient) getGitOptions(repositoryName string) (*git.CloneOptions, bil
 			options.Auth = key
 		}
 	}
-	return options, memfs.New(), memory.NewStorage(), nil
+	return options, nil
 }
 
 type GitStorage interface {
+	GetAllRefsHeads() ([]*api.Ref, error)
 	GetCommitByHash(applicationName string, hash string) (*api.Commit, error)
-	GetLatestCommit(repositoryName string, ref string, force bool) (*api.Commit, error)
+	ScanRefsHeads(repositoryName string) error
 }
 
 type gitStorage struct {
-	gitClient GitClient
-	commits   map[string]*api.Commit
-	branches  map[string]map[string]*api.Commit
+	gitClient      GitClient
+	eventsObserver utils.Observer
+	commits        map[string]*api.Commit
+	branches       map[string]map[string]*api.Commit
 }
 
 func NewGitStorage(
 	gitClient GitClient,
+	eventsObserver utils.Observer,
 ) GitStorage {
 	return &gitStorage{
-		gitClient: gitClient,
-		commits:   map[string]*api.Commit{},
-		branches:  map[string]map[string]*api.Commit{},
+		gitClient:      gitClient,
+		eventsObserver: eventsObserver,
+		commits:        map[string]*api.Commit{},
+		branches:       map[string]map[string]*api.Commit{},
 	}
 }
 
-func (g *gitStorage) GetCommitByHash(applicationName string, hash string) (*api.Commit, error) {
+func (g *gitStorage) GetAllRefsHeads() ([]*api.Ref, error) {
+	var result []*api.Ref
+	for repositoryName, v := range g.branches {
+		for ref, commit := range v {
+			result = append(result, &api.Ref{
+				Repository: repositoryName,
+				Commit:     *commit,
+				Ref:        ref,
+			})
+		}
+	}
+	return result, nil
+}
+
+func (g *gitStorage) GetCommitByHash(repositoryName string, hash string) (*api.Commit, error) {
 	if commit, ok := g.commits[hash]; ok {
 		return commit, nil
 	}
-	commit, err := g.gitClient.GetCommitByHash(applicationName, hash)
+	commit, err := g.gitClient.GetCommitByHash(repositoryName, hash)
 	if err != nil {
 		return nil, err
 	}
@@ -152,23 +196,64 @@ func (g *gitStorage) GetCommitByHash(applicationName string, hash string) (*api.
 	return commit, nil
 }
 
-func (g gitStorage) GetLatestCommit(repositoryName string, ref string, force bool) (*api.Commit, error) {
-	if !force {
-		if repository, ok := g.branches[repositoryName]; ok {
-			if commit, ok := repository[ref]; ok {
-				return commit, nil
+func (g *gitStorage) addRefHeadCommit(repositoryName string, ref string, commit *api.Commit) {
+	g.commits[commit.Sha] = commit
+	if _, ok := g.branches[repositoryName]; !ok {
+		g.branches[repositoryName] = map[string]*api.Commit{}
+	}
+	if oldCommit, ok := g.branches[repositoryName][ref]; !ok || !reflect.DeepEqual(oldCommit, commit) {
+		g.branches[repositoryName][ref] = commit
+		g.eventsObserver.Publish(nil, api.SSEvent{
+			ItemType: "RefHead",
+			Item: api.Ref{
+				Repository: repositoryName,
+				Commit:     *commit,
+				Ref:        ref,
+			},
+			Event: "UPDATED",
+		})
+	}
+}
+
+func (g *gitStorage) ScanRefsHeads(repositoryName string) error {
+	err := g.gitClient.SupplyRefsHeads(repositoryName, func(ref string, commit *api.Commit) {
+		g.addRefHeadCommit(repositoryName, ref, commit)
+	})
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+type GitScanJob interface {
+	Scan()
+}
+
+type gitScanJob struct {
+	repositoryService RepositoryService
+	gitStorage        GitStorage
+}
+
+func NewGitScanJob(repositoryService RepositoryService, gitStorage GitStorage) GitScanJob {
+	return &gitScanJob{
+		repositoryService: repositoryService,
+		gitStorage:        gitStorage,
+	}
+}
+
+func (g *gitScanJob) Scan() {
+	for {
+		rs, err := g.repositoryService.FindAll()
+		if err != nil {
+			log.Errorf("Error on git scan %v", err)
+		}
+		for _, v := range rs {
+			err := g.gitStorage.ScanRefsHeads(v.Name)
+			if err != nil {
+				log.Errorf("Error on git scan %v", err)
 			}
 		}
+		log.Info("ScanRefsHeads finished")
+		time.Sleep(30 * time.Second)
 	}
-	commit, err := g.gitClient.GetLatestCommit(repositoryName, ref)
-	if err != nil {
-		return nil, err
-	}
-	if commit != nil {
-		if _, ok := g.branches[repositoryName]; !ok {
-			g.branches[repositoryName] = map[string]*api.Commit{}
-		}
-		g.branches[repositoryName][ref] = commit
-	}
-	return nil, err
 }
